<resources>
    <string name="app_name">Poseidon Buget</string>
    <string name="title_here">Title Here</string>
    <string name="description_goes_here">Description goes Here</string>
    <string name="allocated_budgets">Allocated Budgets</string>
    <string name="allocation_text">Allocations based on priority</string>
    <string name="back_button">Back</string>
    <string name="home_nav">Dashboard</string>
    <string name="profile_nav">Allocated Budgets</string>
    <string name="add_nav">New budget</string>
    <string name="history_nav">History</string>
    <string name="title_1">CHECK YOUR BUDGET</string>
    <string name="title_2">COMPARE YOUR BUDGET</string>
    <string name="title_3">CALCULATE YOUR BUDGET</string>
    <string name="title_4"></string>
    <string name="username">Username</string>
    <string name="not_registered">Not Registered</string>
    <string name="register_here">Register Here</string>
    <string name="click_here">Click Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="have_an_account">Already have an Account ? Sign in</string>
    <string name="in">Sign in</string>
    <string name="have_an_account_not">Don\'t have an account? Register</string>
    <string name="welcome_to_poseidon_budget">WELCOME TO POSEIDON</string>
    <string name="poseidon">POSEIDON</string>
    <string name="input_amount">Amount</string>
    <string name="enter_name">Enter name</string>
    <string name="make_a_budget">Make a budget</string>
    <string name="home">Home</string>
    <string name="histoy">Histoy</string>
    <string name="add_item">Add item</string>
    <string name="my_account">My account</string>
    <string name="amount_total">Total Budget</string>
    <string name="money">N 10,000</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_user">Username</string>
    <string name="recent">Recent transactions</string>
    <string name="stroke">|</string>
    <string name="FirstSalary">First salary</string>
    <string name="currency_name">Naira</string>
    <string name="currenct_date">29 July 2019</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="dont">New User? Register Now</string>
    <string name="card_arrow">Card image</string>
    <string name="confir_your_password">Confirm your password</string>
    <string name="my_pref">com.gradimut.com.MyPref</string>
    <string name="my_pref_key">com.gradimut.com.MyPrefKey</string>
    <string name="filter">Filter</string>
    <string name="budget_name">Budget Name</string>
    <string name="amount">Amount</string>
    <string name="priority">Priority</string>
    <string name="item_name">Item Name</string>
    <string name="already_nhave_an_naccount">Already  Have an  Account?</string>
    <string name="txtSignup">Here\'s your first step with us</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="p">c</string>
    <string name="no_budget">You have not created any budget yet</string>
    <string name="no_money">N 0.00</string>
    <string-array name="spinner">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>
