<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:contentPadding="14dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <ImageButton
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/home_nav"
            android:onClick="launchDashboard"
            android:padding="8dp"
            android:src="@drawable/ic_home_black_24dp" />

        <ImageButton
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/history_nav"
            android:onClick="launchHistory"
            android:padding="8dp"
            android:src="@drawable/ic_history_black_24dp" />

        <ImageButton
            android:id="@+id/add_nav"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/add_nav"
            android:onClick="launchNew"
            android:padding="8dp"
            android:src="@drawable/ic_add_black_24dp" />

        <ImageButton
            android:id="@+id/profile_nav_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/nav_shape"
            android:contentDescription="@string/profile_nav"
            android:onClick="profileBtn_onClick"
            android:padding="8dp"
            android:src="@drawable/ic_person_black_24dp" />


    </LinearLayout>
</android.support.v7.widget.CardView>