<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_alignParentEnd="true"
        android:textColor="@color/dark"
        android:id="@+id/skip"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/dotsLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/viewPager">

    </LinearLayout>

    <Button
        android:id="@+id/prevBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:text="@string/previous"
        android:textColor="@color/dark"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/viewPager"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textColor="@color/dark"
        android:background="@android:color/transparent"
        android:text="@string/next"
        android:layout_below="@+id/viewPager"/>



</RelativeLayout>